--- a/css/styles.css
+++ b/css/styles.css
@@ -427,17 +427,12 @@
     background-color: var(--accent-color);
   }
   .footer-email {
-    display: block;
-    margin-left: 93px;
-    margin-bottom: 83px;
-    margin-top: 83px;
+    margin-left: auto;
+    /*margin-bottom: 83px;
+    margin-top: 83px;*/
   }
   
-  .footer-form {
-    display: flex;
-    gap: 12px;
-  }
-  .footer-form-field {
+  .footer-email input {
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
@@ -446,28 +441,60 @@
     background-color: inherit;
     font-size: 16px;
     line-height: calc(20/16);
-    padding: 16px;
+    padding: 16px 15px;
   }
 
+  .footer-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    color: var(--background-color);
+  }
+  
+  .footer-form-field {
+    color: var(--background-color)  ;
+    outline: none;
+  }
+    
   .form-btn {
+    position: relative;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    margin: 0;
+    padding: 10px 62px 10px 28px;
+    min-width: 216px;
+    text-align: center;
+    cursor: pointer;
+    color: var(--thirdy-color);
+    background-color: var(--accent-color);
+    border-width: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: var(--background-color);
+    background-color: var(--acent-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .form-btn:hover,
+  .form-btn:focus {
+      background-color: var(--grey-color);
+  }
+  
+  .footer-form {
     display: flex;
     gap: 10px;
-    width: 200px;
-    height: 50px;
-    justify-content: space-between;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: calc(30/16);
-    letter-spacing: 0,06;
   }
-  .form-btn-text {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: calc(30/16);
-    letter-spacing: 0, 06;
-  }
+
   .icon-teleg {
+    position: absolute;
     fill: var(--background-color);
+    margin-left: 10px;
   }
   
   
@@ -575,7 +602,6 @@
   .socials {
     display: flex;
     justify-content: center;
-    align-items: center;
     gap: 10px;
   }
   .socials-link {
@@ -585,10 +611,8 @@
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    background-color: var(--background-color);
+    /*background-color: var(--background-color);*/
     color: var(--grey-color);
-    /*outline: 2px solid red;
-    outline-offset: -2px;*/
     transition: color var(--anim-fast), background-color var(--anim-fast);
   }
   .socials-icon {
